--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="confirm_login">确认登录</string>
     <string name="cancel_login">不要登录</string>
     <string name="point_usage_rule">1.每100积分可以抵扣1元人民币\n2.可用积分大于100时才可抵扣\n3.积分只可整百抵扣\n4.积分只可抵扣订单金额的10%\n5.积分抵扣上限为每单20元</string>
+    <string name="location_err_reselect">定位失败\n默认配送城市为上海\n您需要重新选择配送城市吗？</string>
 </resources>
